<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="10dp"
    android:orientation="vertical">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/interface_name"
            android:layout_width="wrap_content"
            android:layout_height="48sp"
            android:entries="@array/interface_name" />

        <Spinner
            android:id="@+id/port_name"
            android:layout_width="wrap_content"
            android:layout_height="48sp"
            android:entries="@array/port_name" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access"
                android:textSize="34sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trunk"
                android:textSize="34sp" />

        </RadioGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_line2"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/vlan_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="34sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/switch_line3"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/vlan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="34sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@drawable/button_plus"
            android:onClick="onPlusButtonClick"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textSize="35dp"
            app:backgroundTint="#03A9F4" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ListView
        android:id="@+id/vlan_list"
        android:layout_width="match_parent"
        android:layout_height="250dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/shutdown"
            android:textSize="34sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable"
                android:textSize="34sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable"
                android:textSize="34sp" />

        </RadioGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>