<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOKButtonClick"
            android:text="@string/ok"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/router_line2"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipaddress"/>

        <EditText
            android:id="@+id/ipaddress1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."/>

        <EditText
            android:id="@+id/ipaddress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."/>

        <EditText
            android:id="@+id/ipaddress3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."/>

        <EditText
            android:id="@+id/ipaddress4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subnet"/>

        <EditText
            android:id="@+id/subnet1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."/>

        <EditText
            android:id="@+id/subnet2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."/>

        <EditText
            android:id="@+id/subnet3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."/>

        <EditText
            android:id="@+id/subnet4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>